2000-07-23  Andrew G. Tereschenko  <tag@ibis.odessa.ua>

	* src/jikesapi.cpp (parseOptions): Use
	expanded argv not passed in argv. This
	fixes the bug that was causing @ argument
	to not get expanded.

2000-07-23  Mo DeJong  <mdejong@redhat.com>

	* INSTALL: Added detailed build instructions.
	* README: Added note about OSI certification. Removed
	mention of Makefile.hand and jikestst. Removed dead links.
	* doc/ChangeLog: Removed old ChangeLog.
	* doc/jikes.html: Updated FAQ.
	* doc/news.html: Updated news.
	* doc/news_v1.html: Removed old news page, if someone
	wants this info the be retained then they should merge
	it into the docs/news.html file.

2000-07-22  Mo DeJong  <mdejong@redhat.com>

	* configure.in: Do not check for the stdc++ library.
	* src/java.g: Include platform.h not config.h.

2000-07-22  C. Scott Ananian  <cananian@lesser-magoo.lcs.mit.edu>

	* src/error.cpp (PrintRETURN_STATEMENT_IN_INITIALIZER,
	PrintMISPLACED_RETURN_WITH_EXPRESSION,
	PrintMISPLACED_RETURN_WITH_NO_EXPRESSION): Fix typos
	introduced during JikesAPI changes.

2000-07-22  Chris Abbey <cabbey@bresnanlink.net>

	* configure.in: Add check for iconv library.
	* src/m4/ac_cxx_check_set_new_handler.m4: Add
	missing "using namespace std" statement.

2000-07-15  Mo DeJong  <mdejong@redhat.com>

	* src/depcomp: Added missing file.

2000-07-12  Mo DeJong  <mdejong@redhat.com>

	* configure.in: Add JIKES_VERSION_STRING.
	* src/jikes.cpp: Use JIKES_VERSION_STRING,
	update project homepage URL.
	* src/platform.h: unset values in config.h
	that conflict with other symbols in jikes.
	* src/m4/acx_check_pathname_style.m4: Use
	three argument form of AC_DEFINE to keep
	autoheader happy.

2000-07-12  Mo DeJong  <mdejong@redhat.com>

	* src/Makefile.hand: Removed the Makefile
	used in the old build system. All builds
	should now be done with ./configure ; make.

2000-07-12  Mo DeJong  <mdejong@redhat.com>

	* missing:
	* mkinstalldirs: Added files that did not