@@ -1,0 +1,26 @@
+Get IRIX build support working again.
+
+g++ -DHAVE_CONFIG_H -I. -I../../jikes/src -I.     -g -c -o stream.o `test -f ../../jikes/src/stream.cpp || echo '../../jikes/src/'`../../jikes/src/stream.cpp
+../../jikes/src/stream.cpp: In method `void LexStream::ProcessInputUnicode(const char *, long int)':
+../../jikes/src/stream.cpp:895: passing `const char **' as argument 2 of `iconv(_t_iconv *, char **, size_t *, char **, size_t *)' discards qualifiers
+make[1]: *** [stream.o] Error 1
+
+/usr/include/iconv.h
+extern size_t   iconv(iconv_t, char **, size_t *, char **, size_t *);
+
+(on my linux box)
+extern size_t iconv __P ((iconv_t __cd,
+                          __const char **__restrict __inbuf,
+                          size_t *__restrict __inbytesleft,
+                          char **__restrict __outbuf,
+                          size_t *__restrict __outbytesleft));
+
+
+We need a solution like those for wcslen but for iconv.
+
+
+Add test cases for the typos in error.cpp that were fixed
+just before the release. In fact, it would be nice if we
+could generate a test case for every error condition and
+test the compiler output.
+
