@@ -1,2 +1,12 @@
 man_MANS = jikes.1
-EXTRA_DIST = $(man_MANS)
+
+docdir = $(prefix)/doc/${PACKAGE}-${VERSION}
+
+doc_DATA = \
+contrib.html \
+jikes.gif \
+jikes.html \
+license.htm \
+news.html
+
+EXTRA_DIST = $(man_MANS) $(doc_DATA)
