@@ -1,4 +1,4 @@
-.TH jikes 1 "10 January 2000" 
+.TH jikes 1
 .SH NAME
 jikes \- java source to bytecode compiler
 .SH SYNOPSIS
@@ -34,7 +34,7 @@ file.java
 \fBJikes\fP translates Java(TM) source files to bytecode. Features
 include strict adherence to the language specification, automatic
 makefile generation and incremental compilation. It is maintained
-by the Jikes Project, \fIhttp://ibm.com/developerworks/opensource\fP.
+by the Jikes Project.
 
 .SH OPTIONS
 \fBJikes\fP may be invoked with the following command-line options:
@@ -127,8 +127,7 @@ with \fICLASSPATH\fP; a definition using the \fI-classpath\fP option
 takes precedence over any value specified via the environment. 
 .SH "SEE ALSO"
 .TP
-\fIhttp://ibm.com/developerworks/opensource\fP
-See the Jikes Project section 
+See the Jikes Project homepage
 for news of recent developments,
 to download new versions, 
 to report bugs, or 
@@ -149,6 +148,3 @@ available at the Jikes Project URL.
 
 .SH NOTES
 Java is a registered trademark of Sun Microsystems, Inc.
-
-
-
