@@ -1,42 +1,43 @@
 Summary: java source to bytecode compiler
-%define version 1.11
-Buildroot: /var/tmp/jikes-%{version}-root
-Copyright: IBM Public License, http://ibm.com/developerworks/opensource
+%define version 1.12
+Copyright: IBM Public License, http://oss.software.ibm.com/developerworks/opensource/license10.html
 Group: Development/Languages
 Name: jikes
 Packager: David Shields (shields@watson.ibm.com)
 Prefix: /usr
 Provides: jikes
 Release: 1
-Source: http://www10.software.ibm.com/developerworks/opensource/jikes/project/pub/jikes-%{version}.tar.gz 
-URL: http://ibm.com/developerworks/opensource
+Source: jikes-%{version}.tar.gz
+URL: http://oss.software.ibm.com/developerworks/opensource/jikes/project/
 Version: %{version}
-
+Buildroot: /tmp/jikesrpm
 
 %description
 The IBM Jikes compiler translates Java source files to bytecode. It
 also supports incremental compilation and automatic makefile generation,
 and is maintained by the Jikes Project:
-  http://ibm.com/developerworks/opensource
+  http://oss.software.ibm.com/developerworks/opensource/jikes/project/
+
 %prep
-%setup -q -n jikes
-cd src
+%setup -q
 
 %build
-cd src
-./configure --prefix=$RPM_BUILD_ROOT
+./configure --prefix=$RPM_BUILD_ROOT/usr
 make
 
 %install
 rm -fr $RPM_BUILD_ROOT
-cd src
-make prefix=$RPM_BUILD_ROOT/usr install
+make install
 
 %clean
-rm -fr $RPM_BUILD_ROOT
+rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-,-,root)
-%doc README doc/ChangeLog doc/contrib.html doc/jikes.html doc/license.htm doc/news.html doc/news_v1.html
-%doc /usr/man/man1/jikes.1
 /usr/bin/jikes
+/usr/doc/jikes-%{version}/contrib.html
+/usr/doc/jikes-%{version}/jikes.gif
+/usr/doc/jikes-%{version}/jikes.html
+/usr/doc/jikes-%{version}/license.htm
+/usr/doc/jikes-%{version}/news.html
+/usr/man/man1/jikes.1
